Update to 19.1.1 - downloads 19.1.1 binary webapp tar.gz - base image is now tomcat:9.0-jdk11 - add in the distribution into the docker image and volume names as well as labels.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
                 org.labkey.version: ${LABKEY_VERSION}
                 org.labkey.revision: ${LABKEY_REVISION}
                 org.labkey.distribution: ${LABKEY_DISTRIBUTION}
-        image: labkey:${LABKEY_VERSION}-${LABKEY_REVISION}
+        image: labkey:${LABKEY_VERSION}-${LABKEY_REVISION}-${LABKEY_DISTRIBUTION}
         ports:
             - "8080:8080"
         volumes:
@@ -35,13 +35,15 @@ services:
 
 volumes:
     labkey_files:
-        name: labkey_files_${LABKEY_VERSION}-${LABKEY_REVISION}
+        name: labkey_files_${LABKEY_VERSION}-${LABKEY_REVISION}-${LABKEY-DISTRIBUTION}
         labels:
             org.labkey.version: ${LABKEY_VERSION}
             org.labkey.revision: ${LABKEY_REVISION}
+            org.labkey.distribution: ${LABKEY-DISTRIBUTION}
     labkey_db:
-        name: labkey_db_${LABKEY_VERSION}-${LABKEY_REVISION}
+        name: labkey_db_${LABKEY_VERSION}-${LABKEY_REVISION}-${LABKEY-DISTRIBUTION}
         labels:
             org.labkey.version: ${LABKEY_VERSION}
             org.labkey.revision: ${LABKEY_REVISION}
+            org.labkey.distribution: ${LABKEY-DISTRIBUTION}
 
